--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,31 @@ body {
   color: #fafafa;
 }
 
-.main {
-  margin: 60px 1rem;
+.button {
+  position: absolute;
+  top: 3px;
+  right: 3px;
+  font-size: 1.3rem;
+  padding: 5px 10px;
+  background: #ceb1b1;
+  border: 3px outset #ceb1b1a8;
+  box-shadow: 0px 0px 3px 1px #000;
+}
+
+.button:active {
+  border: 3px inset #ceb1b1a8;
+  box-shadow: none;
+}
+.button:hover {
+  color: #630404;
+  cursor: pointer;
 }
 
 .navigation-bar {
   min-height: 50px;
   background-color: #bfb880;
+  background-image: linear-gradient(65deg, #bfb880 49%, #ba7c6b 73%);
+
   position: fixed;
   width: 100%;
   top: 0;
@@ -30,11 +48,14 @@ body {
 }
 
 .menu {
-  display: flex;
   flex-direction: column;
   justify-content: space-around;
   height: 120px;
   display: none;
+}
+
+.menu--open {
+  display: flex;
 }
 
 .menu__link {
@@ -50,4 +71,8 @@ body {
   color: white;
   background-color: #000;
   transition: color 2s ease, background-color 2s ease;
+}
+
+.main {
+  margin: 60px 1rem;
 }
