--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,15 @@ body {
   font-size: 1.3rem;
   padding: 5px 10px;
   background: #ceb1b1;
+  color: #000;
   border: 3px outset #ceb1b1a8;
   box-shadow: 0px 0px 3px 1px #000;
+}
+
+.accent-dot {
+  font-size: 3rem;
+  line-height: 1px;
+  text-shadow: 1px 1px 1px #ff0000;
 }
 
 .button:active {
@@ -32,7 +39,7 @@ body {
   box-shadow: none;
 }
 .button:hover {
-  color: #630404;
+  color: #ff0707;
   cursor: pointer;
 }
 
