--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,9 @@ body {
 }
 
 .button {
-  position: absolute;
-  top: 3px;
-  right: 3px;
+  position: relative;
+  top: 2px;
+  left: 71%;
   font-size: 1.3rem;
   padding: 5px 10px;
   background: #ceb1b1;
