--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ body {
 
 .menu--open {
   display: flex;
+  margin-top: 10px;
 }
 
 .menu__link {
@@ -72,11 +73,17 @@ body {
   color: #630404;
   font-size: 1.3rem;
   font-weight: 700;
-  width: 100%;
   text-align: center;
+  line-height: 35px;
 }
 
-.menu__link:hover {
+.menu__link--accent {
+  color: #00ee0a;
+  text-shadow: 5px 3px 4px #060606;
+}
+
+.menu__link:hover,
+.menu__link--accent:hover {
   color: white;
   background-color: #000;
   transition: color 2s ease, background-color 2s ease;
@@ -175,6 +182,7 @@ body {
   box-shadow: 1px 1px 4px 2px;
   margin: 3em 0 4em;
   padding: 0 0.8em 0.4em;
+  max-width: 600px;
 }
 
 .article__title {
@@ -282,6 +290,10 @@ p.footer__description {
     height: 50px;
   }
 
+  .menu__link:hover {
+    background-color: initial;
+  }
+
   .main {
     margin: 60px 1rem;
     display: grid;
@@ -292,16 +304,22 @@ p.footer__description {
 
   .header {
     grid-column: 1;
+    margin: 0 auto;
   }
 
   .grid-section-1 {
     grid-column: 1;
+    margin: 0 auto;
   }
 
   .grid-section-2 {
     grid-column: 2;
-    grid-row: 1 / span 3;
+    grid-row: 1 / span 2;
     border-left: 2px groove;
+  }
+
+  .footer {
+    grid-column: 1 / span 2;
   }
 
   .section__title--media {
@@ -332,5 +350,26 @@ p.footer__description {
     border-left: none;
     line-height: 3em;
     font-size: 1.45rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  .content-wrapper {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  .navigation-bar {
+    max-width: 1200px;
+  }
+
+  .large-media-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .article {
+    width: 40%;
   }
 }
