--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ body {
 .menu__link--accent:hover {
   color: white;
   background-color: #000;
+  border-radius: 2em;
   transition: color 2s ease, background-color 2s ease;
 }
 
