--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  background-image: url(/img/sky-background.jpg);
+  background-image: url(../img/sky-background.jpg);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
