--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,4 @@
+/*** General settings ***/
 html {
   box-sizing: border-box;
 }
@@ -6,6 +7,14 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
+}
+
+/*** Mixins ***/
+@mixin menuLinkHower {
+  color: white;
+  background-color: #000;
+  border-radius: 2em;
+  transition: color 2s ease, background-color 2s ease;
 }
 
 body {
@@ -17,33 +26,6 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-.button {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  font-size: 1.3rem;
-  padding: 5px 10px;
-  background: #ceb1b1;
-  color: #000;
-  border: 3px outset #ceb1b1a8;
-  box-shadow: 0px 0px 3px 1px #000;
-}
-
-.accent-dot {
-  font-size: 3rem;
-  line-height: 1px;
-}
-
-.button:active {
-  border: 3px inset #ceb1b1a8;
-  box-shadow: none;
-}
-.button:hover {
-  color: #ff0707;
-  transition: color 0.5s ease;
-  cursor: pointer;
-}
-
 .navigation-bar {
   z-index: 1;
   min-height: 50px;
@@ -53,6 +35,34 @@ body {
   width: 100%;
   top: 0;
   box-shadow: 0px 0px 4px 4px #b0989878;
+
+  .button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: 1.3rem;
+    padding: 5px 10px;
+    background: #ceb1b1;
+    color: #000;
+    border: 3px outset #ceb1b1a8;
+    box-shadow: 0px 0px 3px 1px #000;
+
+    &:active {
+      border: 3px inset #ceb1b1a8;
+      box-shadow: none;
+    }
+
+    &:hover {
+      color: #ff0707;
+      transition: color 0.5s ease;
+      cursor: pointer;
+    }
+
+    .accent-dot {
+      font-size: 3rem;
+      line-height: 1px;
+    }
+  }
 }
 
 .menu {
@@ -60,53 +70,51 @@ body {
   justify-content: space-around;
   height: 120px;
   display: none;
-}
 
-.menu--open {
-  display: flex;
-  margin-top: 45px;
-}
+  &__link {
+    text-decoration: none;
+    color: #630404;
+    font-size: 1.3rem;
+    font-weight: 700;
+    text-align: center;
+    line-height: 35px;
 
-.menu__link {
-  text-decoration: none;
-  color: #630404;
-  font-size: 1.3rem;
-  font-weight: 700;
-  text-align: center;
-  line-height: 35px;
-}
+    &--accent {
+      color: #00ee0a;
+      text-shadow: 5px 3px 4px #060606;
+    }
 
-.menu__link--accent {
-  color: #00ee0a;
-  text-shadow: 5px 3px 4px #060606;
-}
+    &:hover {
+      @include menuLinkHower();
+    }
+  }
 
-.menu__link:hover,
-.menu__link--accent:hover {
-  color: white;
-  background-color: #000;
-  border-radius: 2em;
-  transition: color 2s ease, background-color 2s ease;
+  &--open {
+    display: flex;
+    margin-top: 45px;
+  }
 }
 
 .main {
   margin: 60px 1rem;
 }
 
-.header__title {
-  font-family: 'Space Mono', monospace;
-  font-weight: 700;
-  letter-spacing: -2px;
-  text-align: center;
-  line-height: 45px;
-  text-shadow: 4px -1px 6px;
-}
+.header {
+  &__title {
+    font-family: 'Space Mono', monospace;
+    font-weight: 700;
+    letter-spacing: -2px;
+    text-align: center;
+    line-height: 45px;
+    text-shadow: 4px -1px 6px;
+  }
 
-.header__description {
-  color: #00ee0a;
-  font-weight: 500;
-  word-spacing: 5px;
-  line-height: 25px;
+  &__description {
+    color: #00ee0a;
+    font-weight: 500;
+    word-spacing: 5px;
+    line-height: 25px;
+  }
 }
 
 .list {
