--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ html {
   box-sizing: inherit; }
 
 /*** Mixins ***/
+/*** Page styles ***/
 body {
   background-image: url(https://raw.githubusercontent.com/krzysztof-kozak/grid-practice-sandbox/master/img/sky-background.jpg);
   background-size: cover;
@@ -72,71 +73,63 @@ body {
 
 .main {
   margin: 60px 1rem; }
-
-.header__title {
-  font-family: 'Space Mono', monospace;
-  font-weight: 700;
-  letter-spacing: -2px;
-  text-align: center;
-  line-height: 45px;
-  text-shadow: 4px -1px 6px; }
-
-.header__description {
-  color: #00ee0a;
-  font-weight: 500;
-  word-spacing: 5px;
-  line-height: 25px; }
+  .main .header__title {
+    font-family: 'Space Mono', monospace;
+    font-weight: 700;
+    letter-spacing: -2px;
+    text-align: center;
+    line-height: 45px;
+    text-shadow: 4px -1px 6px; }
+  .main .header__description {
+    color: #00ee0a;
+    font-weight: 500;
+    word-spacing: 5px;
+    line-height: 25px; }
 
 .list {
   list-style: none;
   position: relative; }
+  .list__item {
+    position: relative;
+    line-height: 18px;
+    margin-bottom: 0.5em;
+    letter-spacing: 2px;
+    text-shadow: 1px 1px 5px; }
+    .list__item--first {
+      color: #fbc02d;
+      font-weight: 500;
+      text-shadow: 2px 1px 2px; }
+    .list__item--last {
+      color: #4fc3f7;
+      font-weight: 500;
+      text-shadow: 2px 1px 2px; }
+    .list__item .checkmark {
+      position: relative;
+      height: 15px;
+      width: 30px;
+      top: 18px; }
+      .list__item .checkmark::before {
+        position: absolute;
+        left: -29px;
+        top: -12%;
+        height: 0.85em;
+        width: 3px;
+        background-color: #00ee0a;
+        content: '';
+        transform: translateX(10px) rotate(-45deg);
+        transform-origin: left bottom; }
+      .list__item .checkmark::after {
+        position: absolute;
+        left: -28px;
+        bottom: 3px;
+        height: 3px;
+        width: 1.2em;
+        background-color: #00ee0a;
+        content: '';
+        transform: translateX(10px) rotate(-45deg);
+        transform-origin: left bottom; }
 
-.list__item {
-  position: relative;
-  line-height: 18px;
-  margin-bottom: 0.5em;
-  letter-spacing: 2px;
-  text-shadow: 1px 1px 5px; }
-
-.list__item--first {
-  color: #fbc02d;
-  font-weight: 500;
-  text-shadow: 2px 1px 2px; }
-
-.list__item--last {
-  color: #4fc3f7;
-  font-weight: 500;
-  text-shadow: 2px 1px 2px; }
-
-.checkmark {
-  position: relative;
-  height: 15px;
-  width: 30px;
-  top: 18px; }
-
-.checkmark::before {
-  position: absolute;
-  left: -29px;
-  top: -12%;
-  height: 0.85em;
-  width: 3px;
-  background-color: #00ee0a;
-  content: '';
-  transform: translateX(10px) rotate(-45deg);
-  transform-origin: left bottom; }
-
-.checkmark::after {
-  position: absolute;
-  left: -28px;
-  bottom: 3px;
-  height: 3px;
-  width: 1.2em;
-  background-color: #00ee0a;
-  content: '';
-  transform: translateX(10px) rotate(-45deg);
-  transform-origin: left bottom; }
-
-.section__title {
+.section .section__title {
   font-size: 1.4rem;
   font-family: 'Space Mono', monospace;
   color: #fbc02d;
@@ -153,70 +146,59 @@ body {
   margin: 3em 0 4em;
   padding: 0 0.8em 0.4em;
   max-width: 600px; }
-
-.article__title {
-  letter-spacing: 2px;
-  word-spacing: -5px;
-  font-family: 'Space Mono', monospace;
-  color: #4fc3f7;
-  font-size: 1.3rem;
-  text-align: center;
-  padding-top: 1em; }
-
-.article__description {
-  line-height: 1.5rem;
-  text-align: center; }
-
-.side-note__description {
-  font-family: 'Cantarell', sans-serif;
-  line-height: 1.5em;
-  text-align: right;
-  color: #ffb600; }
-
-.side-note__description--padding {
-  text-align: center;
-  padding-left: 9px;
-  border-left: 3px solid #fff;
-  line-height: 2em;
-  font-size: 1.05rem; }
-
-a.side-note__link {
-  font-weight: 600;
-  color: #df1111;
-  letter-spacing: -1px;
-  text-decoration: none; }
-
-a.side-note__link:hover {
-  color: #fff;
-  transition: color 2s ease; }
-
-.bigger {
-  font-size: 1.5rem; }
+  .article__title {
+    letter-spacing: 2px;
+    word-spacing: -5px;
+    font-family: 'Space Mono', monospace;
+    color: #4fc3f7;
+    font-size: 1.3rem;
+    text-align: center;
+    padding-top: 1em; }
+  .article__description {
+    line-height: 1.5rem;
+    text-align: center; }
 
 .wrapper {
   display: flex; }
+
+.side-note {
+  width: 100%; }
+  .side-note .bigger {
+    font-size: 1.5rem; }
+  .side-note__description {
+    font-family: 'Cantarell', sans-serif;
+    line-height: 1.5em;
+    text-align: right;
+    color: #ffb600; }
+    .side-note__description--padding {
+      text-align: center;
+      padding-left: 9px;
+      border-left: 3px solid #fff;
+      line-height: 2em;
+      font-size: 1.05rem; }
+  .side-note__link {
+    font-weight: 600;
+    color: #df1111;
+    letter-spacing: -1px;
+    text-decoration: none; }
+    .side-note__link:hover {
+      color: #fff;
+      transition: color 2s ease; }
 
 .games {
   width: 100%;
   list-style: square;
   padding-left: 10px; }
+  .games__item {
+    padding: 0.5em 0 0; }
+    .games__item:hover {
+      color: #ffb600; }
+  .games .games__link {
+    color: #fafafa; }
+    .games .games__link:hover {
+      color: #4fc3f7; }
 
-.games__item {
-  padding: 0.5em 0 0; }
-
-.games__item:hover {
-  color: #ffb600; }
-
-.games__link {
-  color: #fafafa; }
-
-.games__link:hover {
-  color: #4fc3f7; }
-
-aside.side-note {
-  width: 100%; }
-
-p.footer__description {
+.footer__description {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -226,10 +208,9 @@ p.footer__description {
   text-decoration: none;
   color: #fff;
   margin-left: 1em; }
-
-.footer__link:hover {
-  color: #fbc02d;
-  transition: color 1s ease; }
+  .footer__link:hover {
+    color: #fbc02d;
+    transition: color 1s ease; }
 
 @media (min-width: 768px) {
   .button {
@@ -239,17 +220,17 @@ p.footer__description {
     flex-direction: row;
     align-items: center;
     height: 50px; }
-  .menu__link:hover {
-    background-color: initial; }
+    .menu__link:hover {
+      background-color: initial; }
   .main {
     margin: 60px 1rem;
     display: grid;
     grid-template-columns: 1fr 240px;
     grid-template-rows: 1fr 2fr 50px;
     column-gap: 4rem; }
-  .header {
-    grid-column: 1;
-    margin: 0 auto; }
+    .main .header {
+      grid-column: 1;
+      margin: 0 auto; }
   .grid-section-1 {
     grid-column: 1;
     margin: 0 auto; }
@@ -257,19 +238,17 @@ p.footer__description {
     grid-column: 2;
     grid-row: 1 / span 2;
     border-left: 2px groove; }
-  .footer {
-    grid-column: 1 / span 2; }
-  .section__title--media {
-    border-bottom: none; }
+    .grid-section-2 .section__title--media {
+      border-bottom: none; }
   .wrapper {
     flex-direction: column; }
   .games {
     width: 75%;
     padding-left: 0;
     align-self: flex-end; }
-  .games__item {
-    padding: 1.5em 0 0;
-    font-size: 1.3rem; }
+    .games__item {
+      padding: 1.5em 0 0;
+      font-size: 1.3rem; }
   .side-note__description {
     text-align: center; }
   .side-note__description--padding {
@@ -277,6 +256,9 @@ p.footer__description {
     border-left: none;
     line-height: 3em;
     font-size: 1.45rem; } }
+
+.footer {
+  grid-column: 1 / span 2; }
 
 @media (min-width: 1440px) {
   .content-wrapper {
