removed unnecessary nesting in main.css

--- a/css/main.css
+++ b/css/main.css
@@ -26,26 +26,30 @@ body {
   width: 100%;
   top: 0;
   box-shadow: 0px 0px 4px 4px #b0989878; }
-  .navigation-bar .button {
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    font-size: 1.3rem;
-    padding: 5px 10px;
-    background: #ceb1b1;
-    color: #000;
-    border: 3px outset #ceb1b1a8;
-    box-shadow: 0px 0px 3px 1px #000; }
-    .navigation-bar .button:active {
-      border: 3px inset #ceb1b1a8;
-      box-shadow: none; }
-    .navigation-bar .button:hover {
-      color: #ff0707;
-      transition: color 0.5s ease;
-      cursor: pointer; }
-    .navigation-bar .button .accent-dot {
-      font-size: 3rem;
-      line-height: 1px; }
+
+.button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  font-size: 1.3rem;
+  padding: 5px 10px;
+  background: #ceb1b1;
+  color: #000;
+  border: 3px outset #ceb1b1a8;
+  box-shadow: 0px 0px 3px 1px #000; }
+  .button:active {
+    border: 3px inset #ceb1b1a8;
+    box-shadow: none; }
+  .button:hover {
+    color: #ff0707;
+    transition: color 0.5s ease;
+    cursor: pointer; }
+  .button .accent-dot {
+    font-size: 3rem;
+    line-height: 1px; }
+  @media (min-width: 768px) {
+    .button {
+      display: none; } }
 
 .menu {
   flex-direction: column;
@@ -73,18 +77,20 @@ body {
 
 .main {
   margin: 60px 1rem; }
-  .main .header__title {
-    font-family: 'Space Mono', monospace;
-    font-weight: 700;
-    letter-spacing: -2px;
-    text-align: center;
-    line-height: 45px;
-    text-shadow: 4px -1px 6px; }
-  .main .header__description {
-    color: #00ee0a;
-    font-weight: 500;
-    word-spacing: 5px;
-    line-height: 25px; }
+
+.header__title {
+  font-family: 'Space Mono', monospace;
+  font-weight: 700;
+  letter-spacing: -2px;
+  text-align: center;
+  line-height: 45px;
+  text-shadow: 4px -1px 6px; }
+
+.header__description {
+  color: #00ee0a;
+  font-weight: 500;
+  word-spacing: 5px;
+  line-height: 25px; }
 
 .list {
   list-style: none;
@@ -103,33 +109,34 @@ body {
       color: #4fc3f7;
       font-weight: 500;
       text-shadow: 2px 1px 2px; }
-    .list__item .checkmark {
-      position: relative;
-      height: 15px;
-      width: 30px;
-      top: 18px; }
-      .list__item .checkmark::before {
-        position: absolute;
-        left: -29px;
-        top: -12%;
-        height: 0.85em;
-        width: 3px;
-        background-color: #00ee0a;
-        content: '';
-        transform: translateX(10px) rotate(-45deg);
-        transform-origin: left bottom; }
-      .list__item .checkmark::after {
-        position: absolute;
-        left: -28px;
-        bottom: 3px;
-        height: 3px;
-        width: 1.2em;
-        background-color: #00ee0a;
-        content: '';
-        transform: translateX(10px) rotate(-45deg);
-        transform-origin: left bottom; }
 
-.section .section__title {
+.checkmark {
+  position: relative;
+  height: 15px;
+  width: 30px;
+  top: 18px; }
+  .checkmark::before {
+    position: absolute;
+    left: -29px;
+    top: -12%;
+    height: 0.85em;
+    width: 3px;
+    background-color: #00ee0a;
+    content: '';
+    transform: translateX(10px) rotate(-45deg);
+    transform-origin: left bottom; }
+  .checkmark::after {
+    position: absolute;
+    left: -28px;
+    bottom: 3px;
+    height: 3px;
+    width: 1.2em;
+    background-color: #00ee0a;
+    content: '';
+    transform: translateX(10px) rotate(-45deg);
+    transform-origin: left bottom; }
+
+.section__title {
   font-size: 1.4rem;
   font-family: 'Space Mono', monospace;
   color: #fbc02d;
@@ -161,10 +168,11 @@ body {
 .wrapper {
   display: flex; }
 
+.bigger {
+  font-size: 1.5rem; }
+
 .side-note {
   width: 100%; }
-  .side-note .bigger {
-    font-size: 1.5rem; }
   .side-note__description {
     font-family: 'Cantarell', sans-serif;
     line-height: 1.5em;
@@ -193,9 +201,9 @@ body {
     padding: 0.5em 0 0; }
     .games__item:hover {
       color: #ffb600; }
-  .games .games__link {
+  .games__link {
     color: #fafafa; }
-    .games .games__link:hover {
+    .games__link:hover {
       color: #4fc3f7; }
 
 .footer__description {
