--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,10 @@ body {
   color: #fafafa;
   font-family: 'Roboto', sans-serif; }
 
+.content-wrapper {
+  max-width: 1200px;
+  margin: 0 auto; }
+
 .navigation-bar {
   z-index: 1;
   min-height: 50px;
@@ -25,7 +29,8 @@ body {
   position: fixed;
   width: 100%;
   top: 0;
-  box-shadow: 0px 0px 4px 4px #b0989878; }
+  box-shadow: 0px 0px 4px 4px #b0989878;
+  max-width: 1200px; }
 
 .button {
   position: absolute;
@@ -71,12 +76,39 @@ body {
       background-color: #000;
       border-radius: 2em;
       transition: color 2s ease, background-color 2s ease; }
+      @media (min-width: 768px) {
+        .menu__link:hover {
+          background-color: initial; } }
   .menu--open {
     display: flex;
     margin-top: 45px; }
+  @media (min-width: 768px) {
+    .menu {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      height: 50px; } }
 
 .main {
   margin: 60px 1rem; }
+  @media (min-width: 768px) {
+    .main {
+      margin: 60px 1rem;
+      display: grid;
+      grid-template-columns: 1fr 240px;
+      grid-template-rows: 1fr 3fr 50px;
+      column-gap: 4rem; } }
+
+.grid-section-1 {
+  grid-column: 1;
+  margin: 0 auto; }
+
+.grid-section-2 {
+  grid-column: 2;
+  grid-row: 1 / span 2; }
+  @media (min-width: 768px) {
+    .grid-section-2 {
+      border-left: 2px groove; } }
 
 .header__title {
   font-family: 'Space Mono', monospace;
@@ -91,6 +123,11 @@ body {
   font-weight: 500;
   word-spacing: 5px;
   line-height: 25px; }
+
+@media (min-width: 768px) {
+  .header {
+    grid-column: 1;
+    margin: 0 auto; } }
 
 .list {
   list-style: none;
@@ -145,6 +182,15 @@ body {
   padding-bottom: 0.2em;
   text-align: center;
   letter-spacing: 2px; }
+  @media (min-width: 768px) {
+    .section__title--media {
+      border-bottom: none; } }
+
+@media (min-width: 1440px) {
+  .large-media-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around; } }
 
 .article {
   background-color: #f0ffff1a;
@@ -153,6 +199,9 @@ body {
   margin: 3em 0 4em;
   padding: 0 0.8em 0.4em;
   max-width: 600px; }
+  @media (min-width: 1440px) {
+    .article {
+      width: 40%; } }
   .article__title {
     letter-spacing: 2px;
     word-spacing: -5px;
@@ -167,6 +216,9 @@ body {
 
 .wrapper {
   display: flex; }
+  @media (min-width: 768px) {
+    .wrapper {
+      flex-direction: column; } }
 
 .bigger {
   font-size: 1.5rem; }
@@ -178,12 +230,21 @@ body {
     line-height: 1.5em;
     text-align: right;
     color: #ffb600; }
+    @media (min-width: 768px) {
+      .side-note__description {
+        text-align: center; } }
     .side-note__description--padding {
       text-align: center;
       padding-left: 9px;
       border-left: 3px solid #fff;
       line-height: 2em;
       font-size: 1.05rem; }
+      @media (min-width: 768px) {
+        .side-note__description--padding {
+          text-align: center;
+          border-left: none;
+          line-height: 3em;
+          font-size: 1.45rem; } }
   .side-note__link {
     font-weight: 600;
     color: #df1111;
@@ -201,10 +262,23 @@ body {
     padding: 0.5em 0 0; }
     .games__item:hover {
       color: #ffb600; }
+    @media (min-width) {
+      .games__item {
+        padding: 1.5em 0 0;
+        font-size: 1.3rem; } }
   .games__link {
     color: #fafafa; }
     .games__link:hover {
       color: #4fc3f7; }
+  @media (min-width: 768px) {
+    .games {
+      width: 75%;
+      padding-left: 0;
+      align-self: flex-end; } }
+
+@media (min-width: 768px) {
+  .footer {
+    grid-column: 1 / span 2; } }
 
 .footer__description {
   display: flex;
@@ -219,64 +293,3 @@ body {
   .footer__link:hover {
     color: #fbc02d;
     transition: color 1s ease; }
-
-@media (min-width: 768px) {
-  .button {
-    display: none; }
-  .menu {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    height: 50px; }
-    .menu__link:hover {
-      background-color: initial; }
-  .main {
-    margin: 60px 1rem;
-    display: grid;
-    grid-template-columns: 1fr 240px;
-    grid-template-rows: 1fr 3fr 50px;
-    column-gap: 4rem; }
-    .main .header {
-      grid-column: 1;
-      margin: 0 auto; }
-  .grid-section-1 {
-    grid-column: 1;
-    margin: 0 auto; }
-  .grid-section-2 {
-    grid-column: 2;
-    grid-row: 1 / span 2;
-    border-left: 2px groove; }
-    .grid-section-2 .section__title--media {
-      border-bottom: none; }
-  .wrapper {
-    flex-direction: column; }
-  .games {
-    width: 75%;
-    padding-left: 0;
-    align-self: flex-end; }
-    .games__item {
-      padding: 1.5em 0 0;
-      font-size: 1.3rem; }
-  .side-note__description {
-    text-align: center; }
-  .side-note__description--padding {
-    text-align: center;
-    border-left: none;
-    line-height: 3em;
-    font-size: 1.45rem; } }
-
-.footer {
-  grid-column: 1 / span 2; }
-
-@media (min-width: 1440px) {
-  .content-wrapper {
-    max-width: 1200px;
-    margin: 0 auto; }
-  .navigation-bar {
-    max-width: 1200px; }
-  .large-media-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around; }
-  .article {
-    width: 40%; } }
