added scss modules, added js script to close the mobile menu on window resize

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,9 @@
+/*** Imports ***/
+@import './modules/navigation.scss';
+@import './modules/header.scss';
+@import './modules/section.scss';
+@import './modules/footer.scss';
+
 /*** General settings ***/
 html {
   box-sizing: border-box;
@@ -32,90 +38,6 @@ body {
   margin: 0 auto;
 }
 
-.navigation-bar {
-  z-index: 1;
-  min-height: 50px;
-  background-color: #bfb880;
-  background-image: linear-gradient(65deg, #bfb880 49%, #ba7c6b 73%);
-  position: fixed;
-  width: 100%;
-  top: 0;
-  box-shadow: 0px 0px 4px 4px #b0989878;
-  max-width: 1200px;
-}
-
-.button {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  font-size: 1.3rem;
-  padding: 5px 10px;
-  background: #ceb1b1;
-  color: #000;
-  border: 3px outset #ceb1b1a8;
-  box-shadow: 0px 0px 3px 1px #000;
-
-  &:active {
-    border: 3px inset #ceb1b1a8;
-    box-shadow: none;
-  }
-
-  &:hover {
-    color: #ff0707;
-    transition: color 0.5s ease;
-    cursor: pointer;
-  }
-
-  .accent-dot {
-    font-size: 3rem;
-    line-height: 1px;
-  }
-
-  @media (min-width: 768px) {
-    display: none;
-  }
-}
-
-.menu {
-  flex-direction: column;
-  justify-content: space-around;
-  height: 120px;
-  display: none;
-
-  &__link {
-    text-decoration: none;
-    color: #630404;
-    font-size: 1.3rem;
-    font-weight: 700;
-    text-align: center;
-    line-height: 35px;
-
-    &--accent {
-      color: #00ee0a;
-      text-shadow: 5px 3px 4px #060606;
-    }
-
-    &:hover {
-      @include menuLinkHower();
-      @media (min-width: 768px) {
-        background-color: initial;
-      }
-    }
-  }
-
-  &--open {
-    display: flex;
-    margin-top: 45px;
-  }
-
-  @media (min-width: 768px) {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    height: 50px;
-  }
-}
-
 .main {
   margin: 60px 1rem;
   @media (min-width: 768px) {
@@ -138,243 +60,5 @@ body {
 
   @media (min-width: 768px) {
     border-left: 2px groove;
-  }
-}
-
-.header {
-  &__title {
-    font-family: 'Space Mono', monospace;
-    font-weight: 700;
-    letter-spacing: -2px;
-    text-align: center;
-    line-height: 45px;
-    text-shadow: 4px -1px 6px;
-  }
-
-  &__description {
-    color: #00ee0a;
-    font-weight: 500;
-    word-spacing: 5px;
-    line-height: 25px;
-  }
-  @media (min-width: 768px) {
-    grid-column: 1;
-    margin: 0 auto;
-  }
-}
-
-.list {
-  list-style: none;
-  position: relative;
-
-  &__item {
-    position: relative;
-    line-height: 18px;
-    margin-bottom: 0.5em;
-    letter-spacing: 2px;
-    text-shadow: 1px 1px 5px;
-
-    &--first {
-      color: #fbc02d;
-      font-weight: 500;
-      text-shadow: 2px 1px 2px;
-    }
-
-    &--last {
-      color: #4fc3f7;
-      font-weight: 500;
-      text-shadow: 2px 1px 2px;
-    }
-  }
-}
-
-.checkmark {
-  position: relative;
-  height: 15px;
-  width: 30px;
-  top: 18px;
-
-  &::before {
-    position: absolute;
-    left: -29px;
-    top: -12%;
-    height: 0.85em;
-    width: 3px;
-    background-color: #00ee0a;
-    content: '';
-    transform: translateX(10px) rotate(-45deg);
-    transform-origin: left bottom;
-  }
-
-  &::after {
-    position: absolute;
-    left: -28px;
-    bottom: 3px;
-    height: 3px;
-    width: 1.2em;
-    background-color: #00ee0a;
-    content: '';
-    transform: translateX(10px) rotate(-45deg);
-    transform-origin: left bottom;
-  }
-}
-
-.section {
-  &__title {
-    font-size: 1.4rem;
-    font-family: 'Space Mono', monospace;
-    color: #fbc02d;
-    margin: 1.5em 0 1em;
-    border-bottom: 5px ridge #00ee0a;
-    padding-bottom: 0.2em;
-    text-align: center;
-    letter-spacing: 2px;
-
-    &--media {
-      @media (min-width: 768px) {
-        border-bottom: none;
-      }
-    }
-  }
-}
-
-.large-media-wrapper {
-  @media (min-width: 1440px) {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-}
-
-.article {
-  background-color: #f0ffff1a;
-  border-radius: 2em;
-  box-shadow: 1px 1px 4px 2px;
-  margin: 3em 0 4em;
-  padding: 0 0.8em 0.4em;
-  max-width: 600px;
-  @media (min-width: 1440px) {
-    width: 40%;
-  }
-
-  &__title {
-    letter-spacing: 2px;
-    word-spacing: -5px;
-    font-family: 'Space Mono', monospace;
-    color: #4fc3f7;
-    font-size: 1.3rem;
-    text-align: center;
-    padding-top: 1em;
-  }
-
-  &__description {
-    line-height: 1.5rem;
-    text-align: center;
-  }
-}
-
-.wrapper {
-  display: flex;
-  @media (min-width: 768px) {
-    flex-direction: column;
-  }
-}
-.bigger {
-  font-size: 1.5rem;
-}
-
-.side-note {
-  width: 100%;
-
-  &__description {
-    font-family: 'Cantarell', sans-serif;
-    line-height: 1.5em;
-    text-align: right;
-    color: #ffb600;
-
-    @media (min-width: 768px) {
-      text-align: center;
-    }
-
-    &--padding {
-      text-align: center;
-      padding-left: 9px;
-      border-left: 3px solid #fff;
-      line-height: 2em;
-      font-size: 1.05rem;
-
-      @media (min-width: 768px) {
-        text-align: center;
-        border-left: none;
-        line-height: 3em;
-        font-size: 1.45rem;
-      }
-    }
-  }
-
-  &__link {
-    font-weight: 600;
-    color: #df1111;
-    letter-spacing: -1px;
-    text-decoration: none;
-
-    &:hover {
-      color: #fff;
-      transition: color 2s ease;
-    }
-  }
-}
-
-.games {
-  width: 100%;
-  list-style: square;
-  padding-left: 10px;
-
-  &__item {
-    padding: 0.5em 0 0;
-
-    &:hover {
-      color: #ffb600;
-    }
-    @media (min-width) {
-      padding: 1.5em 0 0;
-      font-size: 1.3rem;
-    }
-  }
-
-  &__link {
-    color: #fafafa;
-
-    &:hover {
-      color: #4fc3f7;
-    }
-  }
-  @media (min-width: 768px) {
-    width: 75%;
-    padding-left: 0;
-    align-self: flex-end;
-  }
-}
-
-.footer {
-  @media (min-width: 768px) {
-    grid-column: 1 / span 2;
-  }
-  &__description {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.2rem;
-  }
-
-  &__link {
-    text-decoration: none;
-    color: #fff;
-    margin-left: 1em;
-
-    &:hover {
-      color: #fbc02d;
-      transition: color 1s ease;
-    }
   }
 }
